@@ -5,6 +5,7 @@ tenace (0.4) upstream; urgency=low
     + Fix parsing of tournament records.
     + Store number of claimed tricks.
     + Implement saving of multiple boards.
+    + Add recently-used handling and filters.
   * Bidding:
     + Fix "make bids for current contract".
   * Add README and require gtk+ 2.12.
